# data-tools

./: Makefile  README.md  check.py  correlation.py  data_preprocess.py  eden_diag.py  eden_measure.csv  errors.py  flood.py  get_errors.py  mean+std.py  measure.py  measurements.csv  pyproject.toml  switching.py
analytics_tools/: analysis.py  analysis.sh  bandwidth.py  clean.py  join.py  smooth.py
data/: eden.csv  web-server.csv
measure_tools/: edge_time_table.sh  flood.py
provisioning_tools/: switch_web-server.sh  switcher.py  time_patterns.py  time_table.py
src/eve_adps/: __init__.py  analysis.py  anomaly_detector.py  app.py  bandwidth.py  clean.py  eden_diag.py  flood.py  join.py  measure.py  smooth.py  switcher.py  time_select.py  time_table.py
web-server/: index.html  rc.local  run-web-server
